--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -464,7 +464,9 @@
    "id": "6a557507-e710-4f19-b486-24d920ba86d2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data1[data1['Hits'==14]]"
+   ]
   }
  ],
  "metadata": {
